--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: 'PixelFont';
-    src: url('04B_30__.TTF') format('truetype');
-}
-
 body {
     margin: 0;
     display: flex;
@@ -16,4 +11,8 @@ body {
 
 canvas {
     display: block;
+}
+
+#game-container {
+    position: relative;
 }
